--- a/settings/config.json
+++ b/settings/config.json
@@ -6,6 +6,7 @@
 	"min_word_count": 1000,
 	"paragraph_min_word_count": 100,
 	"sentence_min_word_count": 25,
+	"page_size_limit": 30,
 	"indicators": [
 		"therefore",
 		"so",
